--- a/site/_data/for_developers.yml
+++ b/site/_data/for_developers.yml
@@ -14,4 +14,4 @@
 
 - category: Features
   title: Scenarios
-  tech: Defined scenarios (available <a href="/scenarios.html">here</a>) to be used in a Behaviour Driven Developemnt perspective
+  tech: Defined scenarios (available <a href="https://esp30.github.io/smartMirrorDoc/scenarios.html">here</a>) to be used in a Behaviour Driven Developemnt perspective
