--- a/site/_data/scenarios.yml
+++ b/site/_data/scenarios.yml
@@ -3,19 +3,19 @@
   FEATURE_DESCRIPTION: In order to get better medical care <br> Users should be able to easily report their current status
   SCENARIO: Choose to Report
   SCENARIO_DESCRIPTION: | 
-    GIVEN a user with a medical condition <br>
-    WHEN the user steps in front of the mirror <br>
-    AND says "Status report" <br>
-    THEN the smart mirror should assess his status (mood) <br>
+    GIVEN a user with a medical condition <br><br>
+    WHEN the user steps in front of the mirror <br><br>
+    AND says "Status report" <br><br>
+    THEN the smart mirror should assess his status (mood) <br><br>
   SCENARIO_STATUS: To be done
 
 - SCENARIO: Report on Wake (RoW)
   SCENARIO_DESCRIPTION: |
-    GIVEN a user with a medical condition <br>
-    AND said user just woke up <br>
-    WHEN the user steps in front of the mirror <br>
-    AND stands there for a few seconds <br>
-    THEN the smart mirror should assess his status (mood) <br>
+    GIVEN a user with a medical condition <br><br>
+    AND said user just woke up <br><br>
+    WHEN the user steps in front of the mirror <br><br>
+    AND stands there for a few seconds <br><br>
+    THEN the smart mirror should assess his status (mood) <br><br>
   SCENARIO_STATUS: To be done
 
 #######################################################################
