Improved home page

--- a/site/_data/tests.yml
+++ b/site/_data/tests.yml
@@ -10,8 +10,8 @@
   steps: ["1", "2"]
   online: true
 
-- title: At canteens
-  category: Canteen Worker
+- title: TBA
+  category: TBA
   text: ""
   steps: ["1", "2"]
   online: true
